--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -r sucrase/register src/index.js"
+    "dev": "nodemon -r sucrase/register src/index.js",
+    "server": "json-server --watch db.json"
   },
   "repository": {
     "type": "git",
@@ -16,7 +17,9 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "2.23.0",
-    "graphql": "15.5.0"
+    "graphql": "15.5.0",
+    "json-server": "^0.16.3",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "eslint": "^7.25.0",
